<resources>
    <string name="app_name">Droid Cafe 4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have
        chocolate wafers and vanilla filling</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="google_mtv_coord_zoom12" translatable="false">geo:37.422114,-122.086744?z=12</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
    <string name="order_activity_name">Order</string>
    <string name="order_button_label">Order</string>
    <string name="you_choose">You choose:</string>
    <string name="choose_delivery">Please choose a delivery option</string>
    <string name="action_cut">Cut</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_new">New</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

</resources>
